welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:17: error: Int does not take parameters
      setCouleurBrosse(T(decalage()+i))
                                 ^